# AccountingManager

./: .gitignore  CMakeLists.txt  main.cpp
src/Records/Accounts/: AccountCreator.cpp  AccountCreator.h  AccountFields.h  AccountType.h  Accounts.cpp  Accounts.h  Assets.cpp  Assets.h  ChartOfAccounts.h  ChartofAccounts.cpp  CompositeAccounts.cpp  CompositeAccounts.h  Equities.cpp  Equities.h  Expenses.cpp  Expenses.h  Liabilities.cpp  Liabilities.h  Revenues.cpp  Revenues.h
src/Records/Database/: Database.cpp  Database.h
src/Records/GeneralLedger/: JournalEntries.h  JournalEntry.h  Ledger.h
test/: UnitTests.cpp
